log/build_2024-02-08_14-26-24/lidar/stdout_stderr.log
running egg_info
writing ../../build/lidar/lidar.egg-info/PKG-INFO
writing dependency_links to ../../build/lidar/lidar.egg-info/dependency_links.txt
writing entry points to ../../build/lidar/lidar.egg-info/entry_points.txt
writing requirements to ../../build/lidar/lidar.egg-info/requires.txt
writing top-level names to ../../build/lidar/lidar.egg-info/top_level.txt
reading manifest file '../../build/lidar/lidar.egg-info/SOURCES.txt'
writing manifest file '../../build/lidar/lidar.egg-info/SOURCES.txt'
running build
running build_py
copying lidar/subscriber_member_function.py -> /home/pimpmobile/ros2_ws/build/lidar/build/lib/lidar
running install
running install_lib
copying /home/pimpmobile/ros2_ws/build/lidar/build/lib/lidar/subscriber_member_function.py -> /home/pimpmobile/ros2_ws/install/lidar/lib/python3.8/site-packages/lidar
byte-compiling /home/pimpmobile/ros2_ws/install/lidar/lib/python3.8/site-packages/lidar/subscriber_member_function.py to subscriber_member_function.cpython-38.pyc
  File "/home/pimpmobile/ros2_ws/install/lidar/lib/python3.8/site-packages/lidar/subscriber_member_function.py", line 39
    self.get_logger().info('I got the distance of: "%s"' % msg.ranges[]) #ranges[1]
                                                                      ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/pimpmobile/ros2_ws/install/lidar/lib/python3.8/site-packages/lidar-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/lidar/lidar.egg-info to /home/pimpmobile/ros2_ws/install/lidar/lib/python3.8/site-packages/lidar-0.0.0-py3.8.egg-info
running install_scripts
Installing lidar_listener script to /home/pimpmobile/ros2_ws/install/lidar/lib/lidar
Installing lidar_talker script to /home/pimpmobile/ros2_ws/install/lidar/lib/lidar
writing list of installed files to '/home/pimpmobile/ros2_ws/build/lidar/install.log'
